--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1dfa3af8-686d-420c-8b58-b8e687816fec",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(instance=\"your-instance\")\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "service.backends()"
    ]
