--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -5,7 +5,18 @@
    "id": "e17b430a-ec17-4a88-9a71-9ce365059bea",
    "metadata": {},
    "source": [
-    "# Write your first Qiskit Serverless program"
+    "# Write your first Qiskit Serverless program\n",
+    "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/serverless-first-program)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/serverless-first-program)\n",
+    "</Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -171,7 +182,12 @@
    "id": "bf57e8a8-4f64-4933-978d-c16bda4e0c0c",
    "metadata": {},
    "source": [
-    "At this point, you can get your backend with `QiskitRuntimeService`, and add your existing program:"
+    "<LegacyContent>\n",
+    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/setup-channel#iqp).\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/cloud-setup).\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -193,10 +209,7 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.backend(backend_name)"
    ]
   },
@@ -246,7 +259,12 @@
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
-    "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)."
+    "<LegacyContent>\n",
+    "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "You can use `save_account()` to save your credentials (See the [Set up to use IBM Cloud](/guides/cloud-setup#cloud-save) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
+    "</CloudContent>"
    ]
   },
   {
