--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -74,8 +74,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a858078-ac19-4ee8-9642-d8d08c8ee58c",
+   "metadata": {},
+   "source": [
+    "<LegacyContent>\n",
+    "To run the following code, be sure you have already authenticated to the service. See [Set up to use IBM Quantum Platform](/guides/setup-channel#set-up-to-use-ibm-quantum-platform) for more details.\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "To run the following code, be sure you have already authenticated to the service. See [Set up your IBM Cloud account](https://quantum.cloud.ibm.com/docs/en/guides/cloud-setup) for more details.\n",
+    "</CloudContent>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1dfa3af8-686d-420c-8b58-b8e687816fec",
    "metadata": {},
    "outputs": [
@@ -96,7 +109,7 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(instance=\"your-instance\")\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "service.backends()"
    ]
