--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -91,7 +91,11 @@ You are sent a monthly invoice that provides details about your resource charges
 
 Additionally, you can determine cost per instance or per job at any time.
 
-### View instance cost
+### View usage
+
+To view the instance's usage, follow the instructions in the [analytics](/admin/analytics) guide.
+
+{/* ### View instance cost
 
 To determine how much has been billed to an instance during the current billing cycle, from the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, click the instance to open its details page.
 
@@ -112,6 +116,7 @@ These are the columns relevant to cost:
 
 - **Usage**: The amount of quantum time used by this job. Quantum time is the duration a QPU is committed to fulfilling a user request.
 - **Cost**: The total cost of running this job.
+*/}
 
 ## Set up spending notifications
 
