--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -93,7 +93,7 @@ Additionally, you can determine cost per instance or per job at any time.
 
 ### View usage
 
-To view the instance's usage, follow the instructions in the [analytics](/admin/analytics) guide.
+To view the instance's usage, follow the instructions in the [analytics](/administration/analytics) guide.
 
 {/* ### View instance cost
 
