--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -146,3 +146,7 @@ This transition enhances security, scalability, and user experience while keepin
 
 * If you currently use the Standard Plan, you dont' have to do anything.  You'll just use the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) interface.
 * If you currently use the Lite Plan (deprecated), you can switch to [using simulators locally](https://quantum.cloud.ibm.com/docs/migration-guides/local-simulators). Optionally, you can [create instances in the Open Plan,](#onboard) which lets you run jobs on quantum hardware.
+
+<Admonition type="important">
+To set, change, or remove cost limits, you need to use the API or CLI.  Follow the instructions in the [Manage cost](/guides/manage-cost#cost-limit) guide.
+</Admonition>
