--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -124,6 +124,7 @@
    "id": "80441467-1d9a-4107-8570-22afa6e369f7",
    "metadata": {},
    "source": [
+    "<LegacyContent>\n",
     "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by expiring it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field) to reduce risk. To initialize the service in this situation, expand the following section to view code you can use:\n",
     "\n",
     "    <details>\n",
@@ -132,11 +133,26 @@
     "    ```python\n",
     "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "    # After using the following code, go to your dashboard (https://quantum.ibm.com/)\n",
+    "    # After using the following code, go to your dashboard\n",
     "    # and expire your API token (click the refresh button in the API token field)\n",
     "    catalog = QiskitFunctionsCatalog(token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
     "    ```\n",
-    "    </details>"
+    "    </details>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API key after each use by deleting it on the [IBM Cloud API keys](https://cloud.ibm.com/iam/apikeys) page to reduce risk. Learn more in the [Managing user API keys](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui) topic. To initialize the service in this situation, expand the following section to view code you can use:\n",
+    "\n",
+    "    <details>\n",
+    "        <summary>Initialize the service in an untrusted environment</summary>\n",
+    "\n",
+    "    ```python\n",
+    "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "\n",
+    "    # After using the following code, delete your API key on the IBM Cloud API keys page\n",
+    "    catalog = QiskitFunctionsCatalog(token=\"<MY_API_KEY>\")\n",
+    "    ```\n",
+    "    </details>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -144,11 +160,20 @@
    "id": "6f2d0a37-1c6d-4cad-a9ce-c4d05c7aaaf1",
    "metadata": {},
    "source": [
+    "<LegacyContent>\n",
     "    <Admonition type=\"caution\">\n",
     "      **Protect your API token!** Never include your token in source code, Python script, or notebook file. When sharing code with others, ensure that your API token is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.\n",
     "\n",
     "      If you accidentally share your token with someone or include it in version control like Git, immediately revoke your token by expiring it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field) to reduce risk.\n",
-    "    </Admonition>"
+    "    </Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "    <Admonition type=\"caution\">\n",
+    "      **Protect your API key!** Never include your key in source code, Python script, or notebook file. When sharing code with others, ensure that your API key is not embedded directly within the Python script. Instead, share the script without the key and provide instructions for securely setting it up.\n",
+    "\n",
+    "      If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by deleting it on the [IBM Cloud API keys](https://cloud.ibm.com/iam/apikeys) page to reduce risk. Learn more in the [Managing user API keys](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui) topic.\n",
+    "    </Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
