--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -26,6 +26,12 @@ The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs o
 Learn how to limit your costs when using the Standard Plan on IBM Quantum&reg; Platform.
 </LegacyContent>
 
+The _cost limit_ or _instance limit_ refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
+
+    <Admonition type="note">
+      The cost limit is always specified in US dollars (USD), then converted to runtime seconds. However, for monthly billing purposes, you are charged in your local currency, specified on your IBM Cloud account. Because currency exchange rates can fluctuate, the cost for X runtime seconds might be different when initially calculated in USD than when you’re actually charged in your local currency. As a result, if your local currency is not USD, the total amount charged for the number of seconds specified in this field could vary from the dollar amount you specify.
+    </Admonition>
+
 <span id="cost-limit"></span>
 ## Set or change a cost limit or instance limit
 
@@ -37,19 +43,21 @@ An instance administrator can limit how much is spent. There are several ways to
 
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
    1. Log in to the CLI: `ibmcloud login --sso`.
-      * When you press return, you are asked whether you want to open a browser.  Type `Y`.
-      * Enter your email and password in the browser that opens, then a code is shown.  Click the copy button.
-      * Go back to the CLI window and paste in the code.
+      1. When you press return, you are asked whether you want to open a browser.  Type `Y`.
+      2. After logging in to the browser that opens, a code is shown.  Click the copy button.
+      3. Return to the CLI window and paste in the code.
    1. Establish the API: `ibmcloud api cloud.ibm.com`
-   1. Update the max cost limit of an instance:
+   1. Update an instance's cost limit:
       ```cli
          ibmcloud resource service-instance-update <INSTANCE_CRN> -p
          '{"instance_limit_seconds":"<SECONDS>"}'
       ```
       where:
-      \<`INSTANCE_CRN`\>: The CRN of the instance you want to update. You can get it from the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com)
-      \<`SECONDS`\>: The maximum number of seconds that can be consumed by the instance. For example, to establish a limit of 1000 seconds (1000 * $1.6 = $1,600)
-   1. View the limit to verify that it was updated: `ibmcloud resource service-instance <INSTANCE_CRN> -o json`
+
+      \<`INSTANCE_CRN`\> is the CRN of the instance you want to update. You can get it from the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com)
+
+      \<`SECONDS`\> is the maximum number of seconds that can be consumed by the instance. For example, to establish a limit of 1000 seconds (1000 * $1.6 = $1,600)
+   1. View the instance details to verify that it was updated: `ibmcloud resource service-instance <INSTANCE_CRN> -o json`
       This command returns a JSON.  For example:
       ```json
           [
@@ -64,12 +72,6 @@ An instance administrator can limit how much is spent. There are several ways to
       ```
 
 {/* * **User interface**: Navigate to the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, then click the instance and set the cost limit. */}
-
-The cost limit or instance limit refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
-
-    <Admonition type="note">
-      The cost limit is always specified in US dollars (USD), then converted to runtime seconds. However, for monthly billing purposes, you are charged in your local currency, specified on your IBM Cloud account. Because currency exchange rates can fluctuate, the cost for X runtime seconds might be different when initially calculated in USD than when you’re actually charged in your local currency. As a result, if your local currency is not USD, the total amount charged for the number of seconds specified in this field could vary from the dollar amount you specify.
-    </Admonition>
 
 ## View the cost limit or instance limit
 
