--- a/docs/migration-guides/migrate-classic-rest-api.mdx
+++ b/docs/migration-guides/migrate-classic-rest-api.mdx
@@ -20,6 +20,7 @@ https://quantum.cloud.ibm.com/api/
 
 
 
+<span id="from-runtime-cloud"></span>
 ## Migrate from the Qiskit Runtime on IBM Cloud REST API
 If you are moving from the [Qiskit Runtime on IBM Cloud REST API](https://cloud.ibm.com/apidocs/quantum-computing), not much has changed for you. The following points are all you need to consider:
 * When you call the API, instead of using `https://us-east.quantum-computing.cloud.ibm.com/` you must use: `https://quantum.cloud.ibm.com/api/`.
@@ -28,7 +29,7 @@ If you are moving from the [Qiskit Runtime on IBM Cloud REST API](https://cloud.
 
 For the whole schema, see the [Qiskit Runtime API.](https://quantum.cloud.ibm.com/api/docs/)
 
-
+<span id="from-classic"></span>
 ## Migrate from the Qiskit Runtime REST API on IBM Quantum Platform Classic
 
 If you are moving from the classic [Qiskit Runtime REST API,](https://docs.quantum.ibm.com/api/runtime) there are two new concepts that are important to understand: **Instances** and **IAM bearer tokens**.
@@ -102,14 +103,14 @@ For the whole schema, see the [Qiskit Runtime API.](https://quantum.cloud.ibm.co
 | POST | `/facade/v1/jobs` | `/v1/jobs` | The `hub`, `group`, and `project` keys are no longer required (use instance CRN instead). <br/> The `private` request body parameter has also been removed. | |
 
 |Request Type | Endpoint | Replacement |
-| --------   | ------   | ------- | 
-| GET | `/facade/v1/jobs/tags` | `/v1/tags` | 
-| GET | `/facade/v1/jobs/\{id\}/type` | **N/A** | 
+| --------   | ------   | ------- |
+| GET | `/facade/v1/jobs/tags` | `/v1/tags` |
+| GET | `/facade/v1/jobs/\{id\}/type` | **N/A** |
 | GET | `/jobs* <br/> `/jobs/\{id\}` <br/> `/jobs/\{id\}/metrics`  | `/v1/jobs` <br/> `/v1/jobs/\{id\}` <br/> `/v1/jobs/\{id\}/metrics` |
-| GET | `/jobs/\{id\}/interim_results` <br/> `/jobs/\{id\}/transpiled_circuits` <br/> `/jobs/\{id\}/logs`  | `/v1/jobs/\{id\}/interim_results` <br/> `/v1/jobs/\{id\}/transpiled_circuits` <br/> `/v1/jobs/\{id\}/logs` | 
-| POST | `/jobs/\{id\}/cancel` | `/v1/jobs/\{id\}/cancel` | 
-| PUT | `/jobs/\{id\}/tags` | `/v1/jobs/\{id\}/tags` | 
-| DELETE | `/jobs/\{id\}` | `/v1/jobs/\{id\}` | 
+| GET | `/jobs/\{id\}/interim_results` <br/> `/jobs/\{id\}/transpiled_circuits` <br/> `/jobs/\{id\}/logs`  | `/v1/jobs/\{id\}/interim_results` <br/> `/v1/jobs/\{id\}/transpiled_circuits` <br/> `/v1/jobs/\{id\}/logs` |
+| POST | `/jobs/\{id\}/cancel` | `/v1/jobs/\{id\}/cancel` |
+| PUT | `/jobs/\{id\}/tags` | `/v1/jobs/\{id\}/tags` |
+| DELETE | `/jobs/\{id\}` | `/v1/jobs/\{id\}` |
 
 #### Changes to session- and workload-related endpoints
 
@@ -119,25 +120,25 @@ For the whole schema, see the [Qiskit Runtime API.](https://quantum.cloud.ibm.co
 
 |Request Type | Endpoint | Replacement |
 | --------   | ------   | ------- |
-| PATCH | `/sessions/\{id\}` | `/v1/sessions\{id\}` | 
-| GET | `/sessions/\{id\}` <br/> `/sessions/\{id\}/extended` | `/v1/sessions\{id\}` <br/> **N/A** | 
-| DELETE | `/sessions/\{id\}/close` | `/v1/sessions\{id\}/close` | 
-| GET | `/workloads/me` | `/v1/workloads` | 
+| PATCH | `/sessions/\{id\}` | `/v1/sessions\{id\}` |
+| GET | `/sessions/\{id\}` <br/> `/sessions/\{id\}/extended` | `/v1/sessions\{id\}` <br/> **N/A** |
+| DELETE | `/sessions/\{id\}/close` | `/v1/sessions\{id\}/close` |
+| GET | `/workloads/me` | `/v1/workloads` |
 
 
 
 #### Changes to system-related endpoints
 
 |Request Type | Endpoint | Replacement | Note |
-| --------   | ------   | ------- | ------- | 
+| --------   | ------   | ------- | ------- |
 | GET | `/backends` | `/v1/backends` | The `provider` query parameter has been removed, use an instance CRN instead. |
 
 |Request Type | Endpoint | Replacement |
-| --------   | ------   | ------- | 
-| GET | `/backends/\{name\}/status` | `/v1/backends/\{id\}/status` | 
+| --------   | ------   | ------- |
+| GET | `/backends/\{name\}/status` | `/v1/backends/\{id\}/status` |
 | GET | `/backends/\{name\}/defaults` | `/v1/backends/\{id\}/defaults` |
-| GET | `/backends/\{name\}/properties` | `/v1/backends/\{id\}/properties` | 
-| GET | `/v1/backends/\{name\}/configuration` | `/v1/backends/\{id\}/configuration` | 
+| GET | `/backends/\{name\}/properties` | `/v1/backends/\{id\}/properties` |
+| GET | `/v1/backends/\{name\}/configuration` | `/v1/backends/\{id\}/configuration` |
 
 
 
