CI test - legacy only page

--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -3,6 +3,7 @@ title: Set up an IBM Quantum channel
 description: Installation and setup instructions for IBM Quantum Platform or IBM Quantum on IBM Cloud to submit Qiskit SDK and Qiskit Runtime jobs
 platform: legacy
 ---
+Test
 
 # Set up an IBM Quantum channel
 <Admonition type="note">
