Test CI - 2 cloud only pages

--- a/docs/guides/calibration-jobs.mdx
+++ b/docs/guides/calibration-jobs.mdx
@@ -3,6 +3,8 @@ title: Calibration jobs
 description: Describes what calibration jobs are and how often they run
 platform: cloud
 ---
+Test
+
 # Calibration jobs
 
 ## What is calibrated?
