--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -1,12 +1,10 @@
 ---
 title: Set up your IBM Cloud account
 description: Installation and setup instructions for IBM Quantum on IBM Cloud to submit Qiskit SDK and Qiskit Runtime jobs
-platform: legacy
+platform: cloud
 ---
 
 {/* cspell:ignore WQVY */}
-
-Test
 
 # Set up your IBM Cloud account
 <Admonition type="note">
